--- a/package.json
+++ b/package.json
@@ -11,6 +11,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.6.10"
+    "@astrojs/react": "^1.2.2",
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.8.2",
+    "@mantine/dropzone": "^5.8.2",
+    "@mantine/hooks": "^5.8.2",
+    "@tabler/icons": "^1.112.0",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "astro": "^1.6.10",
+    "ml5": "^0.12.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
