--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/react": "^1.2.2",
     "@emotion/react": "^11.10.5",
+    "@hookform/resolvers": "^2.9.10",
     "@mantine/core": "^5.8.2",
     "@mantine/dropzone": "^5.8.2",
     "@mantine/hooks": "^5.8.2",
@@ -22,6 +23,8 @@
     "astro": "^1.6.10",
     "ml5": "^0.12.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-hook-form": "^7.39.6",
+    "zod": "^3.19.1"
   }
 }
